RESOLVED FIXED23733
Assertion fails in SecurityOrigin.cpp
https://bugs.webkit.org/show_bug.cgi?id=23733
Summary Assertion fails in SecurityOrigin.cpp
Yael
Reported 2009-02-04 09:52:58 PST
Assertion fails when creating a SecurityOrigin from DatabaseIdentifier. That is because a DatabaseIdentifier includes an origin without a path. The fix is to use a different constructor to KRUL, one that does not asert.
Attachments
Use the KURL constructor that takes 2 parameters instead of one. (1.18 KB, patch)
2009-02-04 09:54 PST, Yael
ap: review+
Yael
Comment 1 2009-02-04 09:54:32 PST
Created attachment 27317 [details] Use the KURL constructor that takes 2 parameters instead of one.
Alexey Proskuryakov
Comment 2 2009-02-04 10:14:15 PST
Comment on attachment 27317 [details] Use the KURL constructor that takes 2 parameters instead of one. r=me It's always better to have a bug URL in ChangeLog.
Yael
Comment 3 2009-02-04 10:27:38 PST
Thank you for quick review. I will make sure to add the bug URL in the future. Now I need help in committing this :-)
Simon Hausmann
Comment 4 2009-02-05 06:34:40 PST
Landed in r40669
Note You need to log in before you can comment on or make changes to this bug.