2009-02-05  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Alexey Proskuryakov.
        Landed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=23733

        Use a 2 arguments constructor for KURL to avoid ASSERT failure.

Canonical link: https://commits.webkit.org/32808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40669 268f45cc-cd09-0410-ab3c-d52691b4dbfc